src/app.css
@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');

@import 'tailwindcss/base';
@import 'tailwindcss/components';
@import 'tailwindcss/utilities';

html,
:host {
	font-family: 'JetBrains Mono', monospace;
	height: 100%;
	width: 100%;
}

body {
	height: 100%;
	width: 100%;
	margin: 0;
	overflow: clip;
	background-color: theme('colors.bg');
	color: theme('colors.fg');
}

*::-webkit-scrollbar {
	display: none;
	-ms-overflow-style: none;
	scrollbar-width: none;
}

